patched rooms route on app.js

--- a/travlr/app_server/views/rooms.hbs
+++ b/travlr/app_server/views/rooms.hbs
@@ -21,6 +21,7 @@
 									<a href="/rooms"><img src="images/{{this.image}}" alt="Img"></a>
 									<h2><a href="rooms">{{this.name}}</a></h2>
 									{{{this.description}}}
+									<span class="rate">Rate: {{this.rate}} / Day</span>
 			{{/each}}
 								</li>
 							</ul>
