--- a/travlr/app_admin/src/app/app.component.html
+++ b/travlr/app_admin/src/app/app.component.html
@@ -6,5 +6,7 @@
 </nav>
 
 <div class="container">
-      <app-trip-listing></app-trip-listing>
+<!--      <app-trip-listing></app-trip-listing> -->
+      <router-outlet></router-outlet>
+      <!-- Allows routing config to control when to display components -->
 </div>
