--- a/travlr/app_admin/src/app/trip-listing/trip-listing.component.html
+++ b/travlr/app_admin/src/app/trip-listing/trip-listing.component.html
@@ -1,6 +1,9 @@
 <!-- <pre>{{trips | json}}</pre> -->
+<div>
+    <button (click)="addTrip()" class="btn btn-info">Add Trip</button>
+</div>
 <div class="row">
-    <div *ngFor="let trip of trips" class="col-3">
+    <div *ngFor="let trip of trips" class="col-md-4">
         <app-trip-card [trip]="trip" class="card-deck mt-2">
         </app-trip-card>
     </div>
