trip-component and add-component added

--- a/travlr/app_admin/src/app/app.component.html
+++ b/travlr/app_admin/src/app/app.component.html
@@ -1,9 +1,10 @@
-<!-- <h1>{{ title }}</h1> -->
-<nav class="navbar navbar-default">
+<!-- Replace old, static navbar for Angular Selector -->
+<!-- <nav class="navbar navbar-default">
 <div class="container-fluid">
       <a class="navbar-brand" href="#">{{ title }}</a>
 </div>
-</nav>
+</nav> -->
+<app-navbar></app-navbar>
 
 <div class="container">
 <!--      <app-trip-listing></app-trip-listing> -->
