--- a/travlr/app_admin/src/app/trip-listing/trip-listing.component.html
+++ b/travlr/app_admin/src/app/trip-listing/trip-listing.component.html
@@ -1,5 +1,5 @@
 <!-- <pre>{{trips | json}}</pre> -->
-<div>
+<div *ngIf="isLoggedIn()">
     <button (click)="addTrip()" class="btn btn-info">Add Trip</button>
 </div>
 <div class="row mt-1" style="--bs-gutter-y: 1.5rem">
