--- a/travlr/app_admin/src/app/edit-trip/edit-trip.component.html
+++ b/travlr/app_admin/src/app/edit-trip/edit-trip.component.html
@@ -5,9 +5,9 @@
         <div class="form-group mb-3">
             <label>Code:</label>
             <input type="text" formControlName="code" placeholder="Code" class="form-control"
-                [ngClass]="{ 'is-invalid': submitted && f['code'].errors }">
-            <div *ngIf="submitted && f['code'].errors">
-                <div *ngIf="f['code'].errors?.['required']">
+                [ngClass]="{ 'is-invalid': submitted && f.code.errors }">
+            <div *ngIf="submitted && f.code.errors">
+                <div *ngIf="f.code.errors.required">
                     Trip Code is required
                 </div>
             </div>
@@ -15,9 +15,9 @@
         <div class="form-group mb-3">
             <label>Name:</label>
             <input type="text" formControlName="name" placeholder="Name" class="form-control"
-                [ngClass]="{ 'is-invalid': submitted && f['name'].errors }">
-            <div *ngIf="submitted && f['name'].errors">
-                <div *ngIf="f['name'].errors?.['required']">
+                [ngClass]="{ 'is-invalid': submitted && f.name.errors }">
+            <div *ngIf="submitted && f.name.errors">
+                <div *ngIf="f.name.errors.required">
                     Name is required
                 </div>
             </div>
@@ -25,9 +25,9 @@
         <div class="form-group mb-3">
             <label>Length:</label>
             <input type="text" formControlName="length" placeholder="Length" class="form-control"
-                [ngClass]="{ 'is-invalid': submitted && f['length'].errors }">
-            <div *ngIf="submitted && f['length'].errors">
-                <div *ngIf="f['length'].errors?.['required']">
+                [ngClass]="{ 'is-invalid': submitted && f.length.errors }">
+            <div *ngIf="submitted && f.length.errors">
+                <div *ngIf="f.length.errors.required">
                     Length is required
                 </div>
             </div>
@@ -35,9 +35,9 @@
         <div class="form-group mb-3">
             <label>Start:</label>
             <input type="date" formControlName="start" placeholder="Start" class="form-control"
-                [ngClass]="{ 'is-invalid': submitted && f['start'].errors }">
-            <div *ngIf="submitted && f['start'].errors">
-                <div *ngIf=" f['start'].errors?.['required']">
+                [ngClass]="{ 'is-invalid': submitted && f.start.errors }">
+            <div *ngIf="submitted && f.start.errors">
+                <div *ngIf=" f.start.errors.required">
                     Date is required
                 </div>
             </div>
@@ -45,9 +45,9 @@
         <div class="form-group mb-3">
             <label>Resort:</label>
             <input type="text" formControlName="resort" placeholder="Resort" class="form-control"
-                [ngClass]="{ 'is-invalid': submitted && f['resort'].errors }">
-            <div *ngIf="submitted && f['resort'].errors">
-                <div *ngIf="f['resort'].errors?.['required']">
+                [ngClass]="{ 'is-invalid': submitted && f.resort.errors }">
+            <div *ngIf="submitted && f.resort.errors">
+                <div *ngIf="f.resort.errors.required">
                     Resort is required
                 </div>
             </div>
@@ -55,9 +55,9 @@
         <div class="form-group mb-3">
             <label>Per Person:</label>
             <input type="text" formControlName="perPerson" placeholder="Per Person" class="form-control"
-                [ngClass]="{ 'is-invalid': submitted && f['perPerson'].errors }">
-            <div *ngIf="submitted && f['perPerson'].errors">
-                <div *ngIf="f['perPerson'].errors?.['required']">
+                [ngClass]="{ 'is-invalid': submitted && f.perPerson.errors }">
+            <div *ngIf="submitted && f.perPerson.errors">
+                <div *ngIf="f.perPerson.errors.required">
                     Per Person is required
                 </div>
             </div>
@@ -65,9 +65,9 @@
         <div class="form-group mb-3">
             <label>Image Name:</label>
             <input type="text" formControlName="image" placeholder="Image" class="form-control"
-                [ngClass]="{ 'is-invalid': submitted && f['image'].errors }">
-            <div *ngIf="submitted && f['image'].errors">
-                <div *ngIf="f['image'].errors?.['required']">
+                [ngClass]="{ 'is-invalid': submitted && f.image.errors }">
+            <div *ngIf="submitted && f.image.errors">
+                <div *ngIf="f.image.errors.required">
                     Image Name is required
                 </div>
             </div>
@@ -75,9 +75,9 @@
         <div class="form-group mb-3">
             <label>Description:</label>
             <input type="text" formControlName="description" placeholder="Description" class="form-control"
-                [ngClass]="{ 'is-invalid': submitted && f['description'].errors }">
-            <div *ngIf="submitted && f['description'].errors">
-                <div *ngIf="f['description'].errors?.['required']">
+                [ngClass]="{ 'is-invalid': submitted && f.description.errors }">
+            <div *ngIf="submitted && f.description.errors">
+                <div *ngIf="f.description.errors.required">
                     Description is required
                 </div>
             </div>
