--- a/travlr/app_admin/src/app/login/login.component.html
+++ b/travlr/app_admin/src/app/login/login.component.html
@@ -7,13 +7,11 @@
             </div>
             <div class="form-group">
                 <label for="email">Email Address</label>
-                <input type="email" class="form-control" id="email" name="email"
-                    placeholder="Enter email address" [(ngModel)]="credentials.email">
+                <input type="email" class="form-control" id="email" name="email" placeholder="Enter email address" [(ngModel)]="credentials.email">
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" class="form-control" id="password" name="password"
-                    placeholder="e.g 12+ alphanumerics" [(ngModel)]="credentials.password">
+                <input type="password" class="form-control" id="password" name="password" placeholder="e.g 12+ alphanumerics" [(ngModel)]="credentials.password">
             </div>
             <button type="submit" role="button" class="btn btnprimary">Sign In!</button>
         </form>
